Change familyName to deviceModel
