# main/http_server/axe-os/src/models/ISystemASIC.ts
@@ -1,6 +1,6 @@
 export interface ISystemASIC {
   ASICModel: string;
-  familyName: string;
+  deviceModel: string;
   swarmColor: string;
   asicCount: number;
   defaultFrequency: number;
